basics on html and css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Library</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="mainContainer">
+      <h1>My Library</h1>
+      <button class="addBook" type="submit">Add Book</button>
+      <div class="booksContainer"></div>
+    </div>
+  </body>
 </html>
