fully functional book library.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="cancelAddBtns">
           <button type="submit" formmethod="dialog">Cancel</button>
-          <button type="submit">Add</button>
+          <button type="submit" class="addBtn">Add</button>
         </div>
       </form>
     </dialog>
